Trigger inline settings on notifications by long tap.

The inline settings should be triggered by long tap.

BUG=818734
TEST=manual

Change-Id: Ieeb7a0c009b15157bd90c823ece84ed39bf676eb
Reviewed-on: https://chromium-review.googlesource.com/950504
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Megumi Hattori <megumihattori@google.com>
Cr-Commit-Position: refs/heads/master@{#541730}
Former-commit-id: f5984fd63967fd1d2c5ff72bfc6dbe924b232fe4